Thu Oct 24 12:22:35 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed channel key packet processing bug on backup router
	  during backup resuming protocol.  Affected file is
	  silcd/packet_receive.c.

	* Fixed memory leaks in server.  Affected files are
	  silcd/server.c and silcd/packet_receive.c.

	* Fixed packet decryption problem when backup router encrypted
	  channel message with wrong key during backup resuming
	  protocol.  Affected file silcd/packet_send.c.

	* ROBODoc documented lib/silccrypt/silccipher.h.  A patch by
	  Toni Willberg (toniw@iki.fi)

	* Changed the SilcCipher context to be private.  Changed the
	  silc_cipher_get_iv to just return pointer to the IV.  Added
	  silc_cipher_get_name to return the name of the cipher.
	  Fixed code all around to support these changes.  Affected
	  files are lib/silccrypt/silccipher.[ch], client library and
	  server.

Wed Oct 23 19:01:41 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed unaligned access in lib/silccore/silcattrs.c.

	* Fixed libtool linking in lib/silcsim/Makefile.am.

	* Fixed services attribute printing.  Affected files is
	  irssi/src/silc/core/silc-queries.c.

Wed Oct 23 09:51:04 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed a crashbug in incoming server accepting.  Affected
	  file silcd/server.c.

Tue Oct 22 13:02:32 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added automatically generated index to Toolkit Reference
	  Manual.

	* Added support for Postscript Toolkit Reference Manual.

Mon Oct 21 21:30:40 CEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Merged DISCONNECT fix, and autoconn port fix from Irssi
	  CVS.

Sun Oct 20 19:54:55 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added 'send_events' boolean argument to the function
	  silc_schedule_set_listen_fd which sends the set events to
	  the application explicitly if set to TRUE.  Default action
	  should be FALSE.  Affected file lib/silcutil/silcschedule.[ch],